<resources>
    <string-array name="mainlist">
        <item>ExceptionExapmleAct</item>
        <item>NestedStateActivity</item>
        <item>NestedScrollEx</item>
        <item>LifeCycleActivity</item>
        <item>ConstrainLayoutEX</item>
        <item>ListViewActivity</item>
        <item>DesignActivity</item>
        <item>NIceAnimAct</item>
        <item>PagerExample</item>
        <item>DimensionActivity</item>
        <item>LvDiffLayout</item>
        <item>AutoCompleteSearchEx</item>
        <item>SearchViewWebExample</item>
        <item>ToolBarActivity</item>
        <item>SysConfgsAct</item>
        <item>SmsReceiverACT</item>
        <item>PopupWindowAct</item>
        <item>CoachMarksActivity</item>
        <item>FilesActivity</item>
        <item>ActionModeEx</item>
        <item>CustomAlertDialog</item>IN
        <item>FontsActivty</item>
        <item>ServiceExampleOne</item>
        <item>TimerActivity</item>
        <item>ShapeActivity</item>
        <item>AnnotationActivity</item>
        <item>ParseTextActivity</item>
        <item>ActivityA</item>
        <item>ProguardExAct</item>
    </string-array>
    <string name="start_btn_label">Start Generation (main)</string>
    <string name="start_btnbr_label">Start Generation (BroadcastReceiver)</string>
    <string name="filling_buf">Filling the data buffer...</string>
    <string name="done_fill">Done filling the data buffer.  Elapsed time: </string>
    <string name="tag_track" translatable="false">tag_track</string>
    <string name="tag_area" translatable="false">tag_area</string>
    <string name="tag_site" translatable="false">tag_site</string>
    <string name="app_name" translatable="false">rec train</string>
    <string name="app_version" translatable="false">1.0.4</string>
    <string name="hello_world">Hello world</string>
    <string name="title_activity_filters">Filters</string>
    <string name="km_away">km away</string>
    <string name="km">km</string>
    <string name="tracks">Treks</string>
    <string name="privacy_public">Public</string>
    <string name="privacy_private">Private</string>
    <string name="toolbar_main_et_hint">Where do you want to travel?</string>
    <string name="signup_already_have_an_account">Already have an account? <font color="#ffcb05">Sign In</font></string>
    <string name="title_activity_activity_login">ActivityLogin</string>
    <string name="title_activity_activity_user_profile">ActivityUserProfile</string>
    <string name="title_activity_activity_search_results">ActivitySearchResults</string>
    <string name="title_activity_activity_add_point">ActivityAddPoint</string>
    <string name="title_activity_activity_save_track">ActivitySaveTrack</string>
    <string name="title_activity_activity_track_details">ActivityTrackDetails</string>
    <string name="facebook_app_id" translatable="false">495122000642590</string>
    <string name="server_client_id" translatable="false">873074241365-s28v21d8qmm183tni9d9kd46m8uc6eoe.apps.googleusercontent.com</string>
    <string name="plan_record_navigate_share_your_trips_live">Plan, Record, Navigate and Share Your Trips Live</string>
    <string name="explore_thousands_of_tracks">Explore thousands of treks</string>
    <string name="record_your_trip_navigate_existing_tracks">Record your trip. Navigate existing treks</string>
    <string name="share_your_track_live_with_friends">Share your track LIVE with friends</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="your_email">Your Email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="connect_with">Connect with</string>
    <string name="navigate">Navigate</string>
    <string name="recent_searches">Recent searches</string>
    <string name="results">Results</string>
    <string name="explore">Explore</string>
    <string name="popular_tracks_areas_in_your_vicinity">Popular tracks and areas in your vicinity</string>
    <string name="where_do_you_want_to_travel">Where do you want to travel?</string>
    <string name="filters">Filters</string>
    <string name="urban">Urban</string>
    <string name="nature">Nature</string>
    <string name="travel_mode">Travel mode</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy_moderate_challenging">Easy, Moderate, Challenging</string>
    <string name="length">Length</string>
    <string name="duration">Duration</string>
    <string name="pet_frinedly">Pet friendly</string>
    <string name="not_disabled_friendly">Non-disabled friendly</string>
    <string name="no_pets_allowed">No pets allowed</string>
    <string name="download">Download</string>
    <string name="add_to_wish_list">Add to Wishlist</string>
    <string name="in_wish_list">in Wishlist</string>
    <string name="downloaded">Downloaded</string>
    <string name="visited_this_area">Visited this area</string>
    <string name="trip_journal">Trip Journal</string>
    <string name="show_more">show more</string>
    <string name="additional_tracks_in_this_area">Additional treks in this area</string>
    <string name="description">Description</string>
    <string name="your_wish_list">Your wish list</string>
    <string name="start_recording">Start recording?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="attach_to_this_point">Attach to this point</string>
    <string name="add_a_note">Add a note</string>
    <string name="challenge">Challenge</string>
    <string name="junction">Junction</string>
    <string name="food">Food</string>
    <string name="entertainment_centers">Entertainment centers</string>
    <string name="boardwalk">Boardwalk</string>
    <string name="fountain">Fountain</string>
    <string name="metal_bars">Metal bars</string>
    <string name="cliff">Cliff</string>
    <string name="pit">Pit</string>
    <string name="dry_waterfall">Dry Waterfall</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="t">T</string>
    <string name="trail_junction">Trail Junction</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="park">Park</string>
    <string name="with_electricity">With electricity</string>
    <string name="with_water">With water</string>
    <string name="water_and_electricity">Water and electricity</string>
    <string name="youth_hostel">Youth Hostel</string>
    <string name="camping">Camping</string>
    <string name="hotel">Hotel</string>
    <string name="guest_house">Guest House</string>
    <string name="sunrise_lookout">Sunrise lookout</string>
    <string name="sunset_lookout">Sunset lookout</string>
    <string name="shaded_area">Shaded area</string>
    <string name="bird_lookout">Bird lookout</string>
    <string name="free_text">Free text</string>
    <string name="restaurant">Restaurant</string>
    <string name="cafe">Cafe</string>
    <string name="winery">Winery</string>
    <string name="pub">Pub</string>
    <string name="beer_brewery">Beer brewery</string>
    <string name="food_quarter">Food quarter</string>
    <string name="market">Market</string>
    <string name="bus_station">Bus Station</string>
    <string name="free_parking">Free parking</string>
    <string name="taxi_station">Taxi Station</string>
    <string name="train_station">Train Station</string>
    <string name="atm">ATM</string>
    <string name="camping_store">Camping store</string>
    <string name="medical_services">Medical Services</string>
    <string name="police">Police</string>
    <string name="tourist_information">Tourist Information</string>
    <string name="shopping_mall">Shopping Mall</string>
    <string name="cinema">Cinema</string>
    <string name="theater">Theater</string>
    <string name="zoo">Zoo</string>
    <string name="trips">Trips</string>
    <string name="hours">Hours</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_tracks_saved_yet">No tracks saved yet</string>
    <string name="start_recording_your_own_tracks">Start recording your own tracks</string>
    <string name="points">points</string>
    <string name="added">added</string>
    <string name="alerts">Alerts</string>
    <string name="chats">Chats</string>
    <string name="no_chats_yet">No chats yet</string>
    <string name="no_alerts_yet">No alerts yet</string>
    <string name="more_info_optional">More info (optional)</string>
    <string name="your_track_will_be_saved_into_your_profile_you_can_edit_your_track_at_any_time">Your trek will be saved into your profile. You can edit your trek at any time.</string>
    <string name="track_name">Trek name</string>
    <string name="privacy">Privacy</string>
    <string name="track_info">Trek info</string>
    <string name="track_media">Trek media</string>
    <string name="public_">Public</string>
    <string name="private_">Private</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="or">or</string>
    <string name="wishlist_is_empty">Wishlist is empty</string>
    <string name="add_favorites_to_your_wishlist">Add favorite treks to your Wishlist</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="an_hour">An hour</string>
    <string name="fil_accessibility">Accessibility</string>
    <string name="fil_recommended_seasons">Recommended seasons</string>
    <string name="disabled_friendly">Disabled friendly</string>
    <string name="pet_friendly">Pet friendly</string>
    <string name="parking_at_track_entrance">Parking at trek entrance</string>
    <string name="winter">Winter</string>
    <string name="summer">Summer</string>
    <string name="autumn">Autumn</string>
    <string name="spring">Spring</string>
    <string name="recommended_seasons">Recommended seasons</string>
    <string name="fil_transportation">Transportation</string>
    <string name="public_transportation_to_starting_point">Public transportation to starting point</string>
    <string name="public_transportation_from_end_point">Public transportation from end point</string>
    <string name="fil_water">Water</string>
    <string name="waterfall">Waterfall</string>
    <string name="water_spring">Spring</string>
    <string name="pool">Pool</string>
    <string name="natural_pool">Natural Pool</string>
    <string name="rappelling">Rappelling</string>
    <string name="picnic_site">Picnic Site</string>
    <string name="picnic_table">Picnic Table</string>
    <string name="drinking_water">Drinking Water</string>
    <string name="playground">Playground</string>
    <string name="bbq">BBQ</string>
    <string name="toilet">Toilet</string>
    <string name="waste_disposal">Waste Disposal</string>
    <string name="holy_site">Holy Site</string>
    <string name="archaeological_site">Archaeological Site</string>
    <string name="heritage_site">Heritage Site</string>
    <string name="fil_attractions">Attraction</string>
    <string name="fil_facilities">Facilities</string>
    <string name="fil_site">Site</string>
    <string name="fil_lodging_and_camping">Lodging and Camping</string>
    <string name="settings">Settings</string>
    <string name="ok">ok</string>
    <string name="location_not_available_please_enable_it">Location not available please\nenable it.</string>
    <string name="waiting_for_location">Waiting for location</string>
    <string name="lets_go">Let\'s start</string>
    <string name="replace_with_message">replace with message</string>
    <string name="maybe">maybe</string>
</resources>