<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:background="@color/background_black"
     android:orientation="vertical"
     android:padding="30dp">
     <TextView
         android:layout_marginBottom="20dp"
         android:id="@+id/messageTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_gravity="center_horizontal"
         android:text="@string/replace_with_message"
         android:textColor="@color/main_white"
         android:textSize="20sp"/>
     <TextView
         android:gravity="start"
         android:id="@+id/negativeTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/messageTv"
         android:layout_marginEnd="25dp"
         android:layout_alignParentStart="true"
         android:text="@string/cancel"
         android:textColor="@color/text_orange"
         android:textSize="15sp"
         android:textStyle="bold"/>

     <TextView
         android:gravity="end"
         android:id="@+id/positiveTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/messageTv"
         android:text="@string/ok"
         android:textColor="@color/text_orange"
         android:textSize="15sp"
         android:textStyle="bold"/>
    <TextView
        android:gravity="center"
         android:id="@+id/neutotalTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        android:layout_centerInParent="true"
         android:layout_below="@id/messageTv"
         android:text="@string/maybe"
         android:textColor="@color/text_orange"
         android:textSize="15sp"
         android:textStyle="bold"/>

</RelativeLayout>