<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     style="@style/dialogbackground"
     android:orientation="vertical">
     <TextView
         android:layout_marginBottom="20dp"
         android:id="@+id/messageTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_gravity="center_horizontal"
         android:text="@string/replace_with_message"
         style="@style/dialogtextcolor"
         android:textSize="20sp"/>
     <TextView
         android:id="@+id/negativeTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/messageTv"
         android:layout_marginEnd="25dp"
         android:layout_toStartOf="@+id/positiveTv"
         android:text="@string/cancel"
         style="@style/dialogtextcolorofbutoons"
         android:textSize="15sp"
         android:textStyle="bold"/>

     <TextView
         android:id="@+id/positiveTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/messageTv"
         android:text="@string/ok"
         style="@style/dialogtextcolorofbutoons"
         android:textSize="15sp"
         android:textStyle="bold"/>

</RelativeLayout>